fixed CSS Nav bar was covering

--- a/src/css/ContactPage.css
+++ b/src/css/ContactPage.css
@@ -6,6 +6,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   padding: 20px;
+ padding-top: 100px; 
 }
 
 h1 {
